--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
-    "react-query": "^3.39.0"
+    "react-query": "^3.39.0",
+    "stripe": "^9.5.0"
   }
 }
